--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
       "react-app/jest"
     ]
   },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-simple-import-sort": "^9.0.0",
+    "prettier": "^2.8.3",
+    "react-scripts": "5.0.1"
+  },
   "dependencies": {
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-router-dom": "6"
   },
   "browserslist": {
     "production": [
