--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react-scripts": "5.0.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.8",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6"
+    "react-router-dom": "^6.7.0"
   },
   "browserslist": {
     "production": [
