--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "firebase": "^9.17.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.7.0",
+    "yup": "^1.0.0"
   },
   "browserslist": {
     "production": [
