--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@iconify/icons-mdi": "^1.2.41",
+    "@iconify/react": "^4.1.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@react-google-maps/api": "^2.18.1",
